# njst

./: .gitignore  Dockerfile  README.md  create_tables.sql  pyproject.toml  redshift.py  sailthru.py  util.py
processed/sailthru/blast/2016/04/01/: blast.20160401.json
processed/sailthru/message_blast/2016/04/01/: message_blast.20160401.json
processed/sailthru/message_transactional/2016/04/01/: message_transactional.20160401.json
processed/sailthru/profile/2016/04/01/: profile.20160401.json
processed/sailthru/profile_browser/2016/04/01/: profile.20160401.json
processed/sailthru/profile_geo/2016/04/01/: profile.20160401.json
processed/sailthru/profile_lists_signup/2016/04/01/: profile.20160401.json
processed/sailthru/profile_vars/2016/04/01/: profile.20160401.json
